// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`functional:config/providers/ConfigService > #load > .js > should load configuration object 1`] = `
{
  "changelog": ChangelogOperation {
    "Aggregator": [Function ChangelogAggregator],
    "Commit": [Function Commit],
    "Formatter": [Function ChangelogFormatter],
    "actions": [],
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/major",
    "from": "",
    "infile": undefined,
    "issues": [],
    "level": "debug",
    "outfile": undefined,
    "pr": [],
    "quiet": false,
    "releases": 1,
    "samefile": false,
    "tagprefix": "pkg-major@",
    "to": "HEAD",
    "types": [
      CommitType {
        "hidden": false,
        "section": ":sparkles: Features",
        "type": "feat",
      },
      CommitType {
        "hidden": false,
        "section": ":bug: Fixes",
        "type": "fix",
      },
      CommitType {
        "hidden": false,
        "section": ":mechanical_arm: Refactors",
        "type": "refactor",
      },
      CommitType {
        "hidden": false,
        "section": ":fire: Performance Improvements",
        "type": "perf",
      },
      CommitType {
        "hidden": false,
        "section": ":wastebasket: Reverts",
        "type": "revert",
      },
      CommitType {
        "hidden": false,
        "section": ":pencil: Documentation",
        "type": "docs",
      },
      CommitType {
        "hidden": false,
        "section": ":white_check_mark: Testing",
        "type": "test",
      },
      CommitType {
        "hidden": false,
        "section": ":package: Build",
        "type": "build",
      },
      CommitType {
        "hidden": false,
        "section": ":robot: Continuous Integration",
        "type": "ci",
      },
      CommitType {
        "hidden": false,
        "section": ":house_with_garden: Housekeeping",
        "type": "chore",
      },
      CommitType {
        "hidden": true,
        "section": "release",
        "type": "release",
      },
      CommitType {
        "hidden": true,
        "section": "style",
        "type": "style",
      },
      CommitType {
        "hidden": true,
        "section": "wip",
        "type": "wip",
      },
    ],
    "unstable": true,
    "write": false,
  },
  "color": true,
  "config": true,
  "cwd": "$PWD/__fixtures__/pkg/major",
  "level": "debug",
  "tag": TagOperation {
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/major",
    "force": false,
    "level": "debug",
    "message": "",
    "object": "HEAD",
    "push": false,
    "remote": "origin",
    "sign": false,
    "tag": ".",
    "tagprefix": "pkg-major@",
    "unstable": true,
    "verify": false,
  },
  "tagprefix": "pkg-major@",
  "unstable": true,
}
`;

exports[`functional:config/providers/ConfigService > #load > .json > should load configuration object 1`] = `
{
  "changelog": ChangelogOperation {
    "Aggregator": [Function ChangelogAggregator],
    "Commit": [Function Commit],
    "Formatter": [Function ChangelogFormatter],
    "actions": [],
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/minor",
    "from": "",
    "infile": undefined,
    "issues": [],
    "level": "debug",
    "outfile": undefined,
    "pr": [],
    "quiet": false,
    "releases": 1,
    "samefile": false,
    "tagprefix": "pkg-minor@",
    "to": "HEAD",
    "types": [
      CommitType {
        "hidden": false,
        "section": ":sparkles: Features",
        "type": "feat",
      },
      CommitType {
        "hidden": false,
        "section": ":bug: Fixes",
        "type": "fix",
      },
      CommitType {
        "hidden": false,
        "section": ":mechanical_arm: Refactors",
        "type": "refactor",
      },
      CommitType {
        "hidden": false,
        "section": ":fire: Performance Improvements",
        "type": "perf",
      },
      CommitType {
        "hidden": false,
        "section": ":wastebasket: Reverts",
        "type": "revert",
      },
      CommitType {
        "hidden": false,
        "section": ":pencil: Documentation",
        "type": "docs",
      },
      CommitType {
        "hidden": false,
        "section": ":white_check_mark: Testing",
        "type": "test",
      },
      CommitType {
        "hidden": false,
        "section": ":package: Build",
        "type": "build",
      },
      CommitType {
        "hidden": false,
        "section": ":robot: Continuous Integration",
        "type": "ci",
      },
      CommitType {
        "hidden": false,
        "section": ":house_with_garden: Housekeeping",
        "type": "chore",
      },
      CommitType {
        "hidden": true,
        "section": "release",
        "type": "release",
      },
      CommitType {
        "hidden": true,
        "section": "style",
        "type": "style",
      },
      CommitType {
        "hidden": true,
        "section": "wip",
        "type": "wip",
      },
    ],
    "unstable": true,
    "write": false,
  },
  "color": true,
  "config": true,
  "cwd": "$PWD/__fixtures__/pkg/minor",
  "level": "debug",
  "tag": TagOperation {
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/minor",
    "force": false,
    "level": "debug",
    "message": "",
    "object": "HEAD",
    "push": false,
    "remote": "origin",
    "sign": false,
    "tag": ".",
    "tagprefix": "pkg-minor@",
    "unstable": true,
    "verify": false,
  },
  "tagprefix": "pkg-minor@",
  "unstable": true,
}
`;

exports[`functional:config/providers/ConfigService > #load > .json5 > should load configuration object 1`] = `
{
  "changelog": ChangelogOperation {
    "Aggregator": [Function ChangelogAggregator],
    "Commit": [Function Commit],
    "Formatter": [Function ChangelogFormatter],
    "actions": [],
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/patch",
    "from": "",
    "infile": undefined,
    "issues": [],
    "level": "debug",
    "outfile": undefined,
    "pr": [],
    "quiet": false,
    "releases": 1,
    "samefile": false,
    "tagprefix": "pkg-patch@",
    "to": "HEAD",
    "types": [
      CommitType {
        "hidden": false,
        "section": ":sparkles: Features",
        "type": "feat",
      },
      CommitType {
        "hidden": false,
        "section": ":bug: Fixes",
        "type": "fix",
      },
      CommitType {
        "hidden": false,
        "section": ":mechanical_arm: Refactors",
        "type": "refactor",
      },
      CommitType {
        "hidden": false,
        "section": ":fire: Performance Improvements",
        "type": "perf",
      },
      CommitType {
        "hidden": false,
        "section": ":wastebasket: Reverts",
        "type": "revert",
      },
      CommitType {
        "hidden": false,
        "section": ":pencil: Documentation",
        "type": "docs",
      },
      CommitType {
        "hidden": false,
        "section": ":white_check_mark: Testing",
        "type": "test",
      },
      CommitType {
        "hidden": false,
        "section": ":package: Build",
        "type": "build",
      },
      CommitType {
        "hidden": false,
        "section": ":robot: Continuous Integration",
        "type": "ci",
      },
      CommitType {
        "hidden": false,
        "section": ":house_with_garden: Housekeeping",
        "type": "chore",
      },
      CommitType {
        "hidden": true,
        "section": "release",
        "type": "release",
      },
      CommitType {
        "hidden": true,
        "section": "style",
        "type": "style",
      },
      CommitType {
        "hidden": true,
        "section": "wip",
        "type": "wip",
      },
    ],
    "unstable": true,
    "write": false,
  },
  "color": true,
  "config": true,
  "cwd": "$PWD/__fixtures__/pkg/patch",
  "level": "debug",
  "tag": TagOperation {
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/patch",
    "force": false,
    "level": "debug",
    "message": "",
    "object": "HEAD",
    "push": false,
    "remote": "origin",
    "sign": false,
    "tag": ".",
    "tagprefix": "pkg-patch@",
    "unstable": true,
    "verify": false,
  },
  "tagprefix": "pkg-patch@",
  "unstable": true,
}
`;

exports[`functional:config/providers/ConfigService > #load > .jsonc > should load configuration object 1`] = `
{
  "changelog": ChangelogOperation {
    "Aggregator": [Function ChangelogAggregator],
    "Commit": [Function Commit],
    "Formatter": [Function ChangelogFormatter],
    "actions": [],
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/premajor",
    "from": "",
    "infile": undefined,
    "issues": [],
    "level": "debug",
    "outfile": undefined,
    "pr": [],
    "quiet": false,
    "releases": 1,
    "samefile": false,
    "tagprefix": "pkg-premajor@",
    "to": "HEAD",
    "types": [
      CommitType {
        "hidden": false,
        "section": ":sparkles: Features",
        "type": "feat",
      },
      CommitType {
        "hidden": false,
        "section": ":bug: Fixes",
        "type": "fix",
      },
      CommitType {
        "hidden": false,
        "section": ":mechanical_arm: Refactors",
        "type": "refactor",
      },
      CommitType {
        "hidden": false,
        "section": ":fire: Performance Improvements",
        "type": "perf",
      },
      CommitType {
        "hidden": false,
        "section": ":wastebasket: Reverts",
        "type": "revert",
      },
      CommitType {
        "hidden": false,
        "section": ":pencil: Documentation",
        "type": "docs",
      },
      CommitType {
        "hidden": false,
        "section": ":white_check_mark: Testing",
        "type": "test",
      },
      CommitType {
        "hidden": false,
        "section": ":package: Build",
        "type": "build",
      },
      CommitType {
        "hidden": false,
        "section": ":robot: Continuous Integration",
        "type": "ci",
      },
      CommitType {
        "hidden": false,
        "section": ":house_with_garden: Housekeeping",
        "type": "chore",
      },
      CommitType {
        "hidden": true,
        "section": "release",
        "type": "release",
      },
      CommitType {
        "hidden": true,
        "section": "style",
        "type": "style",
      },
      CommitType {
        "hidden": true,
        "section": "wip",
        "type": "wip",
      },
    ],
    "unstable": true,
    "write": false,
  },
  "color": true,
  "config": true,
  "cwd": "$PWD/__fixtures__/pkg/premajor",
  "level": "debug",
  "tag": TagOperation {
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/premajor",
    "force": false,
    "level": "debug",
    "message": "",
    "object": "HEAD",
    "push": false,
    "remote": "origin",
    "sign": false,
    "tag": ".",
    "tagprefix": "pkg-premajor@",
    "unstable": true,
    "verify": false,
  },
  "tagprefix": "pkg-premajor@",
  "unstable": true,
}
`;

exports[`functional:config/providers/ConfigService > #load > .mjs > should load configuration object 1`] = `
{
  "changelog": ChangelogOperation {
    "Aggregator": [Function ChangelogAggregator],
    "Commit": [Function Commit],
    "Formatter": [Function ChangelogFormatter],
    "actions": [],
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/preminor",
    "from": "",
    "infile": undefined,
    "issues": [],
    "level": "debug",
    "outfile": undefined,
    "pr": [],
    "quiet": false,
    "releases": 1,
    "samefile": false,
    "tagprefix": "pkg-preminor@",
    "to": "HEAD",
    "types": [
      CommitType {
        "hidden": false,
        "section": ":sparkles: Features",
        "type": "feat",
      },
      CommitType {
        "hidden": false,
        "section": ":bug: Fixes",
        "type": "fix",
      },
      CommitType {
        "hidden": false,
        "section": ":mechanical_arm: Refactors",
        "type": "refactor",
      },
      CommitType {
        "hidden": false,
        "section": ":fire: Performance Improvements",
        "type": "perf",
      },
      CommitType {
        "hidden": false,
        "section": ":wastebasket: Reverts",
        "type": "revert",
      },
      CommitType {
        "hidden": false,
        "section": ":pencil: Documentation",
        "type": "docs",
      },
      CommitType {
        "hidden": false,
        "section": ":white_check_mark: Testing",
        "type": "test",
      },
      CommitType {
        "hidden": false,
        "section": ":package: Build",
        "type": "build",
      },
      CommitType {
        "hidden": false,
        "section": ":robot: Continuous Integration",
        "type": "ci",
      },
      CommitType {
        "hidden": false,
        "section": ":house_with_garden: Housekeeping",
        "type": "chore",
      },
      CommitType {
        "hidden": true,
        "section": "release",
        "type": "release",
      },
      CommitType {
        "hidden": true,
        "section": "style",
        "type": "style",
      },
      CommitType {
        "hidden": true,
        "section": "wip",
        "type": "wip",
      },
    ],
    "unstable": true,
    "write": false,
  },
  "color": true,
  "config": true,
  "cwd": "$PWD/__fixtures__/pkg/preminor",
  "level": "debug",
  "tag": TagOperation {
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/preminor",
    "force": false,
    "level": "debug",
    "message": "",
    "object": "HEAD",
    "push": false,
    "remote": "origin",
    "sign": false,
    "tag": ".",
    "tagprefix": "pkg-preminor@",
    "unstable": true,
    "verify": false,
  },
  "tagprefix": "pkg-preminor@",
  "unstable": true,
}
`;

exports[`functional:config/providers/ConfigService > #load > .mts > should load configuration object 1`] = `
{
  "changelog": ChangelogOperation {
    "Aggregator": [Function ChangelogAggregator],
    "Commit": [Function Commit],
    "Formatter": [Function ChangelogFormatter],
    "actions": [],
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/prepatch",
    "from": "",
    "infile": undefined,
    "issues": [],
    "level": "debug",
    "outfile": undefined,
    "pr": [],
    "quiet": false,
    "releases": 1,
    "samefile": false,
    "tagprefix": "pkg-prepatch@",
    "to": "HEAD",
    "types": [
      CommitType {
        "hidden": false,
        "section": ":sparkles: Features",
        "type": "feat",
      },
      CommitType {
        "hidden": false,
        "section": ":bug: Fixes",
        "type": "fix",
      },
      CommitType {
        "hidden": false,
        "section": ":mechanical_arm: Refactors",
        "type": "refactor",
      },
      CommitType {
        "hidden": false,
        "section": ":fire: Performance Improvements",
        "type": "perf",
      },
      CommitType {
        "hidden": false,
        "section": ":wastebasket: Reverts",
        "type": "revert",
      },
      CommitType {
        "hidden": false,
        "section": ":pencil: Documentation",
        "type": "docs",
      },
      CommitType {
        "hidden": false,
        "section": ":white_check_mark: Testing",
        "type": "test",
      },
      CommitType {
        "hidden": false,
        "section": ":package: Build",
        "type": "build",
      },
      CommitType {
        "hidden": false,
        "section": ":robot: Continuous Integration",
        "type": "ci",
      },
      CommitType {
        "hidden": false,
        "section": ":house_with_garden: Housekeeping",
        "type": "chore",
      },
      CommitType {
        "hidden": true,
        "section": "release",
        "type": "release",
      },
      CommitType {
        "hidden": true,
        "section": "style",
        "type": "style",
      },
      CommitType {
        "hidden": true,
        "section": "wip",
        "type": "wip",
      },
    ],
    "unstable": true,
    "write": false,
  },
  "color": true,
  "config": true,
  "cwd": "$PWD/__fixtures__/pkg/prepatch",
  "level": "debug",
  "tag": TagOperation {
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/prepatch",
    "force": false,
    "level": "debug",
    "message": "",
    "object": "HEAD",
    "push": false,
    "remote": "origin",
    "sign": false,
    "tag": ".",
    "tagprefix": "pkg-prepatch@",
    "unstable": true,
    "verify": false,
  },
  "tagprefix": "pkg-prepatch@",
  "unstable": true,
}
`;

exports[`functional:config/providers/ConfigService > #load > .ts > should load configuration object 1`] = `
{
  "changelog": ChangelogOperation {
    "Aggregator": [Function ChangelogAggregator],
    "Commit": [Function Commit],
    "Formatter": [Function ChangelogFormatter],
    "actions": [],
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/prerelease",
    "from": "",
    "infile": undefined,
    "issues": [],
    "level": "debug",
    "outfile": undefined,
    "pr": [],
    "quiet": false,
    "releases": 1,
    "samefile": false,
    "tagprefix": "pkg-prerelease@",
    "to": "HEAD",
    "types": [
      CommitType {
        "hidden": false,
        "section": ":sparkles: Features",
        "type": "feat",
      },
      CommitType {
        "hidden": false,
        "section": ":bug: Fixes",
        "type": "fix",
      },
      CommitType {
        "hidden": false,
        "section": ":mechanical_arm: Refactors",
        "type": "refactor",
      },
      CommitType {
        "hidden": false,
        "section": ":fire: Performance Improvements",
        "type": "perf",
      },
      CommitType {
        "hidden": false,
        "section": ":wastebasket: Reverts",
        "type": "revert",
      },
      CommitType {
        "hidden": false,
        "section": ":pencil: Documentation",
        "type": "docs",
      },
      CommitType {
        "hidden": false,
        "section": ":white_check_mark: Testing",
        "type": "test",
      },
      CommitType {
        "hidden": false,
        "section": ":package: Build",
        "type": "build",
      },
      CommitType {
        "hidden": false,
        "section": ":robot: Continuous Integration",
        "type": "ci",
      },
      CommitType {
        "hidden": false,
        "section": ":house_with_garden: Housekeeping",
        "type": "chore",
      },
      CommitType {
        "hidden": true,
        "section": "release",
        "type": "release",
      },
      CommitType {
        "hidden": true,
        "section": "style",
        "type": "style",
      },
      CommitType {
        "hidden": true,
        "section": "wip",
        "type": "wip",
      },
    ],
    "unstable": true,
    "write": false,
  },
  "color": true,
  "config": true,
  "cwd": "$PWD/__fixtures__/pkg/prerelease",
  "level": "debug",
  "tag": TagOperation {
    "color": true,
    "config": true,
    "cwd": "$PWD/__fixtures__/pkg/prerelease",
    "force": false,
    "level": "debug",
    "message": "",
    "object": "HEAD",
    "push": false,
    "remote": "origin",
    "sign": false,
    "tag": ".",
    "tagprefix": "pkg-prerelease@",
    "unstable": true,
    "verify": false,
  },
  "tagprefix": "pkg-prerelease@",
  "unstable": true,
}
`;
